@@ -111,6 +111,7 @@ typedef enum {
     PLOT_FIT_CUBIC,
     PLOT_FIT_INVERSE,
     PLOT_FIT_LOESS,
+    PLOT_FIT_LOGLIN,
     PLOT_FIT_NA       /* fit option not applicable */
 } FitType;
 
