@@ -12,6 +12,7 @@ version 1.9.7, in progress
   minimum and maximum from each sub-sample
 - "gnuplot" command: enhance the --with-lines option to permit using
   lines for some series and points for others
+- Plots in GUI: add option to show semilog fitted line
 - New function simann() provides user access to simulated annealing
 - Speed up the production of bootstrapped confidence bands for impulse 
   responses in VECM models
